--- a/Server/.env
+++ b/Server/.env
@@ -6,3 +6,4 @@ CLOUD_NAME = dyvl8ejzl
 CLOUD_API_KEY= 963888934335982
 CLOUD_SECRET_KEY= _3JCt1_Z06G-KUwpZn6uL6d5Mh8
 REDIS_URL=rediss://default:AZ_9AAIjcDEwNDVjZmYxZDQzYjA0MzkzOGZiY2JjYzIzM2I3NjQ1ZnAxMA@trusted-duckling-40957.upstash.io:6379
+ACTIVATION_SECRET = 46384854353
